--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@rive-app/react-canvas": "^4.23.4",
+    "aos": "^2.3.4",
     "framer-motion": "^12.23.22",
+    "gsap": "^3.13.0",
     "next": "15.5.3",
     "ogl": "^1.0.11",
+    "postprocessing": "^6.37.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hamburgers": "^1.0.0",
     "react-icons": "^5.5.0",
     "three": "^0.180.0"
   },
